--- a/src/estilos/var/_fuentes-colores.scss
+++ b/src/estilos/var/_fuentes-colores.scss
@@ -177,5 +177,5 @@ $font-size-entradas: (
 @mixin hamburguesa-fuente {
   color: $blanco;
   font-family: $font-family-cinzel;
-  font-size: $fuente-menu-pua;
+  font-size: $clamp-h4;
 }
